==> wirepas/wm-sdk/mcu/efr/efr32/hal/usart_dma.c <==
#include <stdint.h>
#include <stdbool.h>
#include <string.h>
#include "hal_api.h"
#include "board.h"
#include "board_usart.h"
#include "api.h"
#include "em_cmu.h"
#include "em_gpio.h"
#include "em_usart.h"
#include "em_ldma.h"
#define DMA_RX_CH   1
#define DMA_TX_CH   2
#define BUFFER_SIZE                     256u
#include "doublebuffer.h"
#define TIMEOUT_INACTIVITY_RX_BAUD_TIME  20 //< Unit is in baud time

bool Usart_init(uint32_t baudrate, uart_flow_control_e flow_control)
{
#ifdef BOARD_USART_FORCE_BAUDRATE
    // Some hardware only support a given speed, so override the chosen baudrate
    baudrate = BOARD_USART_FORCE_BAUDRATE;
#endif
    (void)flow_control;

    // Enable GPIO clock
    BOARD_USART_ENABLE_GPIO_CLK;

#ifdef BOARD_USART_VCOM_PORT
    // Enable vcom
    hal_gpio_set_mode(BOARD_USART_VCOM_PORT,
                      BOARD_USART_VCOM_PIN,
                      GPIO_MODE_DISABLED);
    hal_gpio_clear(BOARD_USART_VCOM_PORT,
                   BOARD_USART_VCOM_PIN);
    hal_gpio_set_mode(BOARD_USART_VCOM_PORT,
                      BOARD_USART_VCOM_PIN,
                      GPIO_MODE_OUT_PP);
    hal_gpio_set(BOARD_USART_VCOM_PORT,
                 BOARD_USART_VCOM_PIN);
#endif

    // uart_tx_pin
    hal_gpio_set_mode(BOARD_USART_GPIO_PORT,
                      BOARD_USART_TX_PIN,
                      GPIO_MODE_DISABLED);
    hal_gpio_clear(BOARD_USART_GPIO_PORT,
                   BOARD_USART_TX_PIN);
    // uart_rx_pin
    hal_gpio_set_mode(BOARD_USART_GPIO_PORT,
                      BOARD_USART_RX_PIN,
                      GPIO_MODE_DISABLED);
    hal_gpio_clear(BOARD_USART_GPIO_PORT,
                   BOARD_USART_RX_PIN);

    // Module variables
    m_rx_callback = NULL;
    m_enabled = 0;
    m_rx_enabled = false;

    // Disable RX interrupt
    Sys_disableAppIrq(BOARD_UART_RX_IRQn);
    Sys_clearFastAppIrq(BOARD_UART_RX_IRQn);

    // Must enable clock for configuration period
    BOARD_USART_ENABLE_USART_CLK;

    // Set UART baudrate
    USART_InitAsync_TypeDef USART_init = USART_INITASYNC_DEFAULT;
    USART_init.enable = usartDisable;
    USART_init.baudrate = baudrate;
    USART_init.oversampling = usartOVS4;
    USART_init.hwFlowControl = usartHwFlowControlNone;
    USART_InitAsync(BOARD_USART, &USART_init);

    // Set UART route
    BOARD_USART_ROUTE;

    // Set UART output pins
    BOARD_USART_PINS;

    /* Setup the UART Rx timeout
     * Timeout is in baud time */
    BOARD_USART->TIMECMP1 =
        USART_TIMECMP1_TSTOP_RXACT |
        USART_TIMECMP1_TSTART_RXEOF |
        ((TIMEOUT_INACTIVITY_RX_BAUD_TIME & _USART_TIMECMP1_TCMPVAL_MASK)
            << _USART_TIMECMP1_TCMPVAL_SHIFT);

    // Disable all interrupt sources
    BOARD_USART->IEN = 0;
    // Clear all irq flags
    BOARD_USART_CLR_IRQ_ALL;
    // Enable transmitter
    BOARD_USART->CMD = USART_CMD_TXEN;

    // Configuration done: disable clock
    BOARD_USART_DISABLE_USART_CLK;

    // APP IRQ
    Sys_clearFastAppIrq(LDMA_IRQn);
    Sys_enableFastAppIrq(LDMA_IRQn,
                         APP_LIB_SYSTEM_IRQ_PRIO_HI,
                         LDMA_IRQHandler);

    // Prepare TX buffer
    m_tx_ongoing = false;
    m_tx_started = false;
    DoubleBuffer_init(m_tx_buffers);

    // Prepare RX buffer
    DoubleBuffer_init(m_rx_buffers);

    return true;
}

void Usart_setEnabled(bool enabled)
{
    Sys_enterCriticalSection();
    if(enabled)
    {
        // Detect if someone is enabling UART but not disabling it ever
        if(m_enabled == 0)
        {
            // Enable clocks
            BOARD_USART_ENABLE_USART_CLK;
            BOARD_USART_ENABLE_LDMA_CLK;
            // Enable LDMA block
            BOARD_USART_LDMA_ENABLE;

            // Disable deep sleep
            DS_Disable(DS_SOURCE_USART);
            // Set output
            hal_gpio_set_mode(BOARD_USART_GPIO_PORT,
                              BOARD_USART_TX_PIN,
                              GPIO_MODE_OUT_PP);
        }
        m_enabled++;
    }
    else if (m_enabled > 0)
    {
        // Usart was enabled at least one time
        m_enabled--;

        if(m_enabled == 0)
        {
            // In case a Tx was started, wait for end of transfer
            wait_end_of_tx();

            // Set light pullup
            hal_gpio_set_mode(BOARD_USART_GPIO_PORT,
                              BOARD_USART_TX_PIN,
                              GPIO_MODE_IN_PULL);
            hal_gpio_set(BOARD_USART_GPIO_PORT,
                         BOARD_USART_TX_PIN);
            // Enable deep sleep
            DS_Enable(DS_SOURCE_USART);
            // Disable LDMA block
            BOARD_USART_LDMA_DISABLE;
            // Disable clocks
            BOARD_USART_DISABLE_LDMA_CLK;
            BOARD_USART_DISABLE_USART_CLK;
        }
    }
    Sys_exitCriticalSection();
}

void Usart_receiverOn(void)
{
    Sys_enterCriticalSection();
    if (m_rx_enabled)
    {
        // Already enabled
        Sys_exitCriticalSection();
        return;
    }

    m_rx_enabled = true;

    // Clear RX timeout
    BOARD_USART_CLR_IRQ_TCMP1;

    // Prepare RX buffer
    DoubleBuffer_init(m_rx_buffers);

    start_dma_rx_lock();

    BUS_RegBitWrite(&(BOARD_USART->CMD), _USART_CMD_RXEN_SHIFT, 1);

    Sys_exitCriticalSection();
}

void Usart_receiverOff(void)
{
    Sys_enterCriticalSection();

#if defined(EFR32MG22) || defined(EFR32FG23)
    // Stop Current DMA transfer
    if (CMU->CLKEN0 & CMU_CLKEN0_LDMA)
    {
        BUS_RegBitWrite(&(LDMA->CHEN), DMA_RX_CH, 0);
    }
    if (CMU->CLKEN0 & BOARD_USART_CMU_BIT)
    {
        BUS_RegBitWrite(&(BOARD_USART->CMD), _USART_CMD_RXDIS_SHIFT, 1);
    }
#else
    // Stop Current DMA transfer
    BUS_RegBitWrite(&(LDMA->CHEN), DMA_RX_CH, 0);
    BUS_RegBitWrite(&(BOARD_USART->CMD), _USART_CMD_RXDIS_SHIFT, 1);
#endif
    m_rx_enabled = false;
    Sys_exitCriticalSection();
}

void Usart_enableReceiver(serial_rx_callback_f rx_callback)
{
    Sys_enterCriticalSection();
    // Set callback
    m_rx_callback = rx_callback;
    // Enable clock
    BOARD_USART_ENABLE_USART_CLK;
    if(rx_callback)
    {
        // Enable the RX interrupt
        Sys_enableFastAppIrq(BOARD_UART_RX_IRQn,
                             APP_LIB_SYSTEM_IRQ_PRIO_HI,
                             USART_RX_IRQHandler);
        // Enable the correct interrupt
        BUS_RegBitWrite(&(BOARD_USART->IEN), _USART_IEN_TCMP1_SHIFT, 1);

        // Set light pull-up resistor
        hal_gpio_set_mode(BOARD_USART_GPIO_PORT,
                          BOARD_USART_RX_PIN,
                          GPIO_MODE_IN_PULL);
        hal_gpio_set(BOARD_USART_GPIO_PORT,
                     BOARD_USART_RX_PIN);

    }
    else
    {
        Sys_disableAppIrq(BOARD_UART_RX_IRQn);
        BUS_RegBitWrite(&(BOARD_USART->IEN), _USART_IEN_TCMP1_SHIFT, 0);
        hal_gpio_set_mode(BOARD_USART_GPIO_PORT,
                          BOARD_USART_RX_PIN,
                          GPIO_MODE_DISABLED);
        // Disable pull-up for disabled GPIO:s
        hal_gpio_clear(BOARD_USART_GPIO_PORT,
                       BOARD_USART_RX_PIN);
    }

    // Clear RX timeout
    BOARD_USART_CLR_IRQ_TCMP1;
    // Disable clock
    BOARD_USART_DISABLE_USART_CLK;
    Sys_clearFastAppIrq(BOARD_UART_RX_IRQn);
    Sys_exitCriticalSection();
}
