==> wirepas/wm-sdk/mcu/nrf/nrf91/hal/usart_dma.c <==
#include <stdint.h>
#include <stdbool.h>
#include <string.h>
#include "board.h"
#include "hal_api.h"
#include "api.h"
#define BUFFER_SIZE                     256u
#include "doublebuffer.h"
#define RX_BUFFER_SIZE                 255u
#define TIMEOUT_CHAR_N                  5

bool Usart_init(uint32_t baudrate, uart_flow_control_e flow_control)
{
    bool ret;

    /* Module variables */
    m_enabled = 0;
    m_rx_enabled = false;
    m_rx_callback = NULL;

    /* GPIO init */
    nrf_gpio_cfg_default(BOARD_USART_TX_PIN);
    nrf_gpio_pin_set(BOARD_USART_TX_PIN);
    nrf_gpio_cfg_default(BOARD_USART_RX_PIN);
    nrf_gpio_pin_set(BOARD_USART_RX_PIN);

    NRF_UARTE0->PSEL.TXD = BOARD_USART_TX_PIN;
    NRF_UARTE0->PSEL.RXD = BOARD_USART_RX_PIN;
    NRF_UARTE0->TASKS_STOPTX = 1;
    NRF_UARTE0->TASKS_STOPRX = 1;
    NRF_UARTE0->ENABLE = UARTE_ENABLE_ENABLE_Disabled;

#if defined(BOARD_USART_CTS_PIN) && defined (BOARD_USART_RTS_PIN)
    nrf_gpio_cfg_default(BOARD_USART_CTS_PIN);
    nrf_gpio_pin_set(BOARD_USART_CTS_PIN);
    nrf_gpio_cfg_default(BOARD_USART_RTS_PIN);
    nrf_gpio_pin_set(BOARD_USART_RTS_PIN);
    /* Set flow control */
    set_flow_control(flow_control == UART_FLOW_CONTROL_HW);
#endif

    /* Uart speed */
    ret = set_baud(baudrate);
    // Even if ret is False, do the end of init to have a uart at default baudrate

    /* Initialize DMA part*/
    init_dma(baudrate);

    /* APP IRQ */
    Sys_clearFastAppIrq(UART0_IRQn);
    Sys_enableFastAppIrq(UART0_IRQn,
                         APP_LIB_SYSTEM_IRQ_PRIO_HI,
                         UARTE0_IRQHandler);

    Sys_clearFastAppIrq(TIMER1_IRQn);
    Sys_enableFastAppIrq(TIMER1_IRQn,
                         APP_LIB_SYSTEM_IRQ_PRIO_HI,
                         TIMER1_IRQHandler);

    return ret;
}

void Usart_setEnabled(bool enabled)
{
    Sys_enterCriticalSection();
    if (enabled)
    {
        if(m_enabled == 0)
        {
            // Disable deep sleep
            DS_Disable(DS_SOURCE_USART);
            // Set output
            nrf_gpio_cfg(BOARD_USART_TX_PIN,
                         NRF_GPIO_PIN_DIR_OUTPUT,
                         NRF_GPIO_PIN_INPUT_CONNECT,
                         NRF_GPIO_PIN_NOPULL,
                         NRF_GPIO_PIN_S0S1,
                         NRF_GPIO_PIN_NOSENSE);
            NRF_UARTE0->ENABLE = UARTE_ENABLE_ENABLE_Enabled;
        }
        m_enabled++;
    }
    else
    {
        if (m_enabled > 0)
        {
            m_enabled--;
        }
        if(m_enabled == 0)
        {
            NRF_UARTE0->ENABLE = UARTE_ENABLE_ENABLE_Disabled;
            // Set input
            nrf_gpio_cfg_input(BOARD_USART_TX_PIN, NRF_GPIO_PIN_NOPULL);
            // Enable deep sleep
            DS_Enable(DS_SOURCE_USART);
        }
    }
    Sys_exitCriticalSection();
}

void Usart_receiverOn(void)
{
    Sys_enterCriticalSection();
    if (m_rx_enabled)
    {
        // Already enabled
        Sys_exitCriticalSection();
        return;
    }

    m_rx_enabled = true;

    // Clear events
    NRF_UARTE0->EVENTS_RXDRDY = 0;
    NRF_UARTE0->EVENTS_ENDRX = 0;
    NRF_UARTE0->EVENTS_RXSTARTED = 0;

    // Reset Timer 1
    NRF_TIMER1->EVENTS_COMPARE[0] = 0;

    // Prepare RX buffer
    NRF_UARTE0->RXD.PTR = (uint32_t) m_rx_circular_buffer;
    NRF_UARTE0->RXD.MAXCNT = RX_BUFFER_SIZE;
    m_last_rx_index = 0;

    // Reset Timer2 that is our index in circular buffer
    NRF_TIMER2->TASKS_CLEAR = 1;
    NRF_TIMER2->TASKS_START = 1;

    // Enable our ppi group
    NRF_DPPIC->TASKS_CHG[0].EN = 1;

    // Start uart reception
    NRF_UARTE0->TASKS_STARTRX = 1;
    Sys_exitCriticalSection();
}

void Usart_receiverOff(void)
{
    Sys_enterCriticalSection();
    // Disable our ppi group
    NRF_DPPIC->TASKS_CHG[0].DIS = 1;

    // Stop uart reception
    NRF_UARTE0->TASKS_STOPRX = 1;

    // Stop Timer2 that count the RX bytes
    NRF_TIMER2->TASKS_STOP = 1;

    // Stop Timer1 that is used for timeout and started
    // once RX is started to reduce power consumption.
    // It may be improved even further by stopping it when
    // there is no byte received yet, but not important as
    // we already have auto-power mechanism when needed.
    NRF_TIMER1->TASKS_STOP = 1;

    m_rx_enabled = false;
    Sys_exitCriticalSection();
}

void Usart_enableReceiver(serial_rx_callback_f rx_callback)
{
    Sys_enterCriticalSection();
    /* Set callback */
    m_rx_callback = rx_callback;
    if (m_rx_callback)
    {
        // Enable RX input
        nrf_gpio_cfg(BOARD_USART_RX_PIN,
                     NRF_GPIO_PIN_DIR_INPUT,
                     NRF_GPIO_PIN_INPUT_CONNECT,
                     NRF_GPIO_PIN_NOPULL,
                     NRF_GPIO_PIN_S0S1,
                     NRF_GPIO_PIN_SENSE_LOW);
    }
    else
    {
        // Disable RX input: note autopowering uart will not work either
        nrf_gpio_cfg_default(BOARD_USART_RX_PIN);
    }
    Sys_exitCriticalSection();
}
